--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "react-dom": "^15.6.2",
     "react-scripts": "1.0.13"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --config .prettierrc --write",
+      "git add"
+    ]
+  },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
