Install 'stylelint' & 'stylelint-config-standard' packages as devDependencies

--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "build": "yarn run build-css && react-scripts build",
     "test": "NODE_PATH=src react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "stylelint": "^8.1.1",
+    "stylelint-config-standard": "^17.0.0"
   }
 }
