Modify lint-staged script to apply stylelint to scss and eslint to js, jsx & json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "react-scripts": "1.0.13"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
+    "src/**/*.{js,jsx,json}": [
+      "eslint --fix",
+      "prettier --config .prettierrc --write",
+      "git add"
+    ],
+    "src/**/*.scss": [
+      "stylelint --config=.stylelintrc --fix",
       "prettier --config .prettierrc --write",
       "git add"
     ]
