--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "prettier": "^1.7.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-scripts": "1.0.13"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "react-scripts": "1.0.13",
+    "redux": "^3.7.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json}": [
